# flexchat

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in~  config.status  configure  configure.ac
data/: Makefile  Makefile.am  Makefile.in
data/icons/: Makefile  Makefile.am  Makefile.in
data/man/: Makefile  Makefile.am  Makefile.in  hexchat.1.in
data/misc/: Makefile  Makefile.am  Makefile.in  io.github.Flexchat.appdata.xml.in  io.github.Flexchat.desktop.in.in  io.github.Hexchat.appdata.xml  io.github.Hexchat.desktop
po/: POTFILES
src/: Makefile  Makefile.am  Makefile.in
src/common/: Makefile  Makefile.am  Makefile.in  cfgfiles.c  common.vcxproj  common.vcxproj.filters  ctcp.c  dcc.c  fe.h  hexchat.c  hexchat.h  hexchatc.h  outbound.c  proto-irc.c  text.c
src/common/.deps/: libhexchatcommon_a-cfgfiles.Po  libhexchatcommon_a-chanopt.Po  libhexchatcommon_a-ctcp.Po  libhexchatcommon_a-dcc.Po  libhexchatcommon_a-hexchat.Po  libhexchatcommon_a-history.Po  libhexchatcommon_a-ignore.Po  libhexchatcommon_a-inbound.Po  libhexchatcommon_a-marshal.Po  libhexchatcommon_a-modes.Po  libhexchatcommon_a-network.Po  libhexchatcommon_a-notify.Po  libhexchatcommon_a-outbound.Po  libhexchatcommon_a-proto-irc.Po  libhexchatcommon_a-scram.Po  libhexchatcommon_a-server.Po  libhexchatcommon_a-servlist.Po  libhexchatcommon_a-ssl.Po  libhexchatcommon_a-text.Po  libhexchatcommon_a-tree.Po  libhexchatcommon_a-url.Po  libhexchatcommon_a-userlist.Po  libhexchatcommon_a-util.Po
src/fe-fltk/: Makefile  Makefile.am  Makefile.in  fe-fltk.cpp
src/fe-fltk/.deps/: fe-fltk.Po
src/fe-text/: Makefile  Makefile.am  Makefile.in  fe-text.c
src/fe-text/.deps/: fe-text.Po
